
####   Don't forget to change the version number in configure.ac!   ####

19 Nov 2004 Document OSTAILOR QUIET - Ivan Warren
18 Nov 2004 Fix zero ilc & pgm oldpsw problem - Jan Jaeger
18 Nov 2004 DIEBR,DIDBR instructions - Roger Bowler
18 Nov 2004 VPATH Build enablement - Ivan Warren
17 Nov 2004 Fix instruction operand trace display - Jan Jaeger
17 Nov 2004 MADBR,MADB,MAEBR,MAEB,MSDBR,MSDB,MSEBR,MSEB instructions - Roger Bowler
16 Nov 2004 MXDBR,MXDB,MDEBR,MDEB instructions - Roger Bowler
15 Nov 2004 LDXBR,LEXBR,CXFBR,CXGBR,CFXBR,CGXBR instructions - Roger Bowler
14 Nov 2004 Fix AR-mode translation when alet is 2 - Greg Smith
13 Nov 2004 LXEB,LXEBR,LXDB,LXDBR instructions - Roger Bowler
01 Nov 2004 Simplify ALRF integration in LASP (Suggested by RB) - Ivan Warren
15 Oct 2004 Apply CKD Shadow file update to FBA devices - Ivan Warren
14 Oct 2004 Resolved pointers to signed/unsigned types issues
            revealed by gcc 4.0 pre-release experiments - Ivan Warren
12 Oct 2004 Tweak cckd free space processing - Greg Smith
12 Oct 2004 Fix broken suspend/resume - Greg Smith
11 Oct 2004 Changed libgcrypt requirement to 1.1.90 or better - Ivan Warren
10 Oct 2004 Repaired some deprecated warnings dyncrypt.c - Bernard van der Helm
07 Oct 2004 OPTION_WAKEUP_SELECT_VIA_PIPE - Ivan Warren by Fish
05 Oct 2004 cr_mask.pat - Fix SIE intercept logic for LCTL - Greg Smith
05 Oct 2004 no_ffs.pat - Remove ffs ia32 assembler assist - Greg Smith
01 Oct 2004 Fix segfault when IPLing with IPL CPU offline - Ivan Warren
29 Sep 2004 Fix load/store multiple change (21 Sep 2004) to actually
            improve performance - Greg Smith
28 Sep 2004 Fix directive inside macro problem in tapecopy.c - Greg Smith
28 Sep 2004 Fix resume-suspend logic in channel.c - Greg Smith
28 Sep 2004 Added iplc (IPL Clear), sysreset (System reset) and
            sysclear (System reset clear) panel commands - Ivan Warren
26 Sep 2004 Fix segfault when multiple ckd files for dasd volume - Greg Smith