@@ -1,6 +1,7 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
 
+20 Nov 2004 Add CHSC commands for linux/390 - Jan Jaeger
 19 Nov 2004 Document OSTAILOR QUIET - Ivan Warren
 18 Nov 2004 Fix zero ilc & pgm oldpsw problem - Jan Jaeger
 18 Nov 2004 DIEBR,DIDBR instructions - Roger Bowler
